# bdd-llm-experiments

./: .flake8  .gitignore  main.py  openai_api_proxy.py  pyproject.toml  pytest.ini  send_openai_api_request.py  spec.md  t.py
api/: main.py
api/api/: main.py
bdd_llm/: llm_user.py  log.py  mocks.py  pyproject.toml  runners.py  user.py  user_agent.py
bdd_llm/bdd_llm/: callbacks.py  conversation_analyzer.py  llm_user.py  messages.py  runners.py  user.py
chat_ui/: main.py  pyproject.toml
file_assistant/: main.py  pyproject.toml  t.py
file_assistant/file_assistant/: assistant.py
file_assistant/tests/: file_assistant_test.py
hotel_reservations/: .env  assistant.py  core.py  dependencies.py  hotel_reservations_assistant_talk_tune_test.py  main.py  pyproject.toml  t.py  tools.py
hotel_reservations/features/: book_room.feature  environment.py
hotel_reservations/features/steps/: book_room.py
hotel_reservations/hotel_reservations/: assistant.py  callbacks.py  chat_open_router.py  core.py  date_assistant.py  dependencies.py  function_call_agent_output_parser.py
hotel_reservations/tests/: helpers.py  hotel_reservations_assistant_test.py
hotel_reservations_api/: pyproject.toml
hotel_reservations_api/api/: main.py
hotel_reservations_graph/: .env  main.py  pyproject.toml
hotel_reservations_graph/features/: book_room.feature  date_assistant.feature
hotel_reservations_graph/features/steps/: book_room.py  book_room_steps.py  date_assistant_steps.py
hotel_reservations_graph/hotel_reservations/: assistant.py  date_assistant.py
hotel_reservations_graph/tests/: llm_user.py  mocks.py  test_date_assistant.py  test_hotel_reservations_assistant.py
hotel_reservations_server/: pyproject.toml
tests/: hotel_reservations_assistant_test.py
